feat(artista): update seed and delete