@@ -1,9 +1,9 @@
 package com.seletivo.domain.exceptions;
+
 import com.seletivo.domain.AggregateRoot;
 import com.seletivo.domain.Identifier;
 import com.seletivo.domain.validation.Error;
 
-import java.util.Collections;
 import java.util.List;
 
 public class NotFoundException extends DomainException {
@@ -13,13 +13,24 @@ public class NotFoundException extends DomainException {
     }
 
     public static NotFoundException with(
-            final Class<? extends AggregateRoot<?>> anAggregate,
+            final Class<? extends AggregateRoot<?>> aggregate,
             final Identifier id
     ) {
-        final var anError = "%s with ID %s was not found".formatted(
-                anAggregate.getSimpleName(),
+        final var error = "%s with ID %s was not found".formatted(
+                aggregate.getSimpleName(),
                 id.getValue()
         );
-        return new NotFoundException(anError, Collections.emptyList());
+        return new NotFoundException(error, List.of(new Error(error)));
+    }
+
+    public static NotFoundException with(
+            final Class<? extends AggregateRoot<?>> aggregate,
+            final Object id
+    ) {
+        final var error = "%s with ID %s was not found".formatted(
+                aggregate.getSimpleName(),
+                id.toString()
+        );
+        return new NotFoundException(error, List.of(new Error(error)));
     }
 }
